# SatWave-App

./: .env.example  .gitignore  Dockerfile  QUICK_START_BOT.md  ROBOFLOW_SETUP.md  TROUBLESHOOTING.md  WASTE_MODEL_SETUP.md  app.json  docker-compose.yml  eas.json  package.json  pyproject.toml  readme.md  requirements.txt  run_bot.py
.expo/: settings.json
.expo/types/: router.d.ts
app/: _layout.tsx  index.tsx  rezult.tsx
app/(auth)/: sign-in.tsx  sign-up.tsx
app/(tabs)/: _layout.tsx  coupons.tsx  forum.tsx  index.tsx  leaderboard.tsx  profile.tsx
constants/: api.ts  colors.ts  trash-types.ts
contexts/: app-context.tsx  auth-context.tsx
docs/: README.md  TELEGRAM_BOT_SETUP.md  connect-frontend-backend.md
docs/adr/: 001-clean-architecture.md  002-ml-framework.md  002-webhook-vs-polling.md  003-deduplication-strategy.md  003-duplicate-detection.md  004-telegram-bot.md  005-stub-adapters.md  README.md  template.md
docs/algorithms/: overview.md
docs/api/: endpoints.md  overview.md  webhook.md
docs/architecture/: analysis-flow.md  clean-architecture.md  overview.md  services.md
docs/bot/: development.md  setup.md  telegram-bot.md  user-flows.md
docs/deployment/: docker.md
docs/development/: setup.md  testing.md
src/satwave/: __init__.py  main.py
src/satwave/adapters/: __init__.py
src/satwave/adapters/api/: __init__.py  app.py  auth.py  coupons.py  dependencies.py  webhook.py
src/satwave/adapters/bot/: __init__.py  handlers.py  telegram_bot.py
src/satwave/adapters/ml/: __init__.py  roboflow_inference_classifier.py  stub_classifier.py  yolo_classifier.py
src/satwave/adapters/storage/: __init__.py  stub_photo_storage.py  stub_repository.py
src/satwave/config/: settings.py
src/satwave/core/: __init__.py
src/satwave/core/domain/: __init__.py  exceptions.py  models.py  ports.py
src/satwave/core/services/: __init__.py  photo_analysis_service.py
tests/: __init__.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_webhook_api.py
tests/unit/: test_models.py  test_photo_analysis_service.py
types/: app.ts  coupon.ts
