[project]
name = "satwave"
version = "0.1.0"
description = "Платформа для обнаружения, классификации и коммерциализации вторсырья"
# NOTE: README excluded from build because the file encoding is not UTF-8 and
# breaks editable installs on Windows. Convert readme.md to UTF-8 and set
# `readme = "readme.md"` later if needed.
requires-python = ">=3.11"
authors = [
    { name = "SatWave Team" }
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "aiogram>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
]

ml = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "ultralytics>=8.0.0",  # YOLOv8
    "detectron2>=0.6",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
]

db = [
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.12.0",
    "geoalchemy2>=0.14.0",
]

[project.scripts]
satwave = "satwave.main:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["satwave"]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = "detectron2.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ultralytics.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--cov=satwave",
    "--cov-report=term-missing",
    "--cov-report=html",
]

